--- a/src/GUIMain.form
+++ b/src/GUIMain.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.GUIMain">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUIMain">
   <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="4" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="8" vgap="-1">
     <margin top="8" left="8" bottom="8" right="8"/>
     <constraints>
